Project

General

Profile

Actions

Bug #48145

closed

[librbd] removing pool config overrides does not cause config refresh

Added by Jason Dillaman over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The timestamp is not updated when removing a pool override so in-use librbd clients will not detect that a pool override was removed and therefore should be restored to global defaults.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #48224: nautilus: [librbd] removing pool config overrides does not cause config refreshResolvedNathan CutlerActions
Copied to rbd - Backport #48225: octopus: [librbd] removing pool config overrides does not cause config refreshResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman over 3 years ago

  • Pull request ID set to 37977
Actions #2

Updated by Mykola Golub over 3 years ago

  • Status changed from In Progress to Pending Backport
Actions #3

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48224: nautilus: [librbd] removing pool config overrides does not cause config refresh added
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48225: octopus: [librbd] removing pool config overrides does not cause config refresh added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF