librbd: update hidden global config when removing pool config override

The remove notification was missed and therefore in-use images will not
properly remove pool config overrides.

Fixes: https://tracker.ceph.com/issues/48145
Signed-off-by: Jason Dillaman <dillaman@redhat.com>